--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     },
     "rules": {
       "vue/multi-word-component-names": "off",
-      "vue/no-unused-components": "off"
+      "vue/no-unused-components": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
