--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.2.2",
     "vee-validate": "^4.13.2",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.14.0",
     "vue-router": "^4.4.5",
     "yup": "^1.4.0"
   },
